common and branches example

--- a/docs/source/index.html.md.erb
+++ b/docs/source/index.html.md.erb
@@ -4,23 +4,20 @@ title: Open Insurance Brasil
 search: true
 
 language_tabs: # must be one of https://git.io/vQNgJ
-  - json
-  - java
-  - go
-  - php
-  - python
+  - shell
+  - javascript
 
 code_clipboard: true
 
 includes:
-- intro
-- glosario
-- seguranca
-- api_comum
-- api_canais_atendimento
-- api_produtos
+- introduction
+- glossary
+- security
+- common_apis
+- channels_apis
+- api_products
 - schemas
-- diretorio_participantes
+- participant
 - faq
 
 toc_footers:
