--- a/docs/source/index.html.md.erb
+++ b/docs/source/index.html.md.erb
@@ -14,9 +14,8 @@ includes:
 - glossary
 - security
 - common_apis
-- channels_apis
+- canais_atendimento
 - api_products
-- schemas
 - participant
 - faq
 
