--- a/documentation/source/index.html.md.erb
+++ b/documentation/source/index.html.md.erb
@@ -4,8 +4,9 @@ title: Open Insurance Brasil
 search: true
 
 language_tabs: # must be one of https://git.io/vQNgJ
-  - shell
-  - javascript
+- javascript
+- python
+- java
 
 code_clipboard: true
 
@@ -14,8 +15,7 @@ includes:
 - glossary
 - security
 - common_apis
-- channels
-- api_products
+- open_insurance
 - participant
 - faq
 
