fix: middleman build

--- a/documentation/source/includes/_open_insurance.md.erb
+++ b/documentation/source/includes/_open_insurance.md.erb
@@ -1,3 +1,4 @@
+# Open Insurance
 <%= partial "./includes/partials_open_insurance/_open_data_channels" %>
 <%= partial "./includes/partials_open_insurance/_open_life_welfare" %>
 <%= partial "./includes/partials_open_insurance/_open_people" %>
