--- a/documentation/source/stylesheets/screen.css.scss
+++ b/documentation/source/stylesheets/screen.css.scss
@@ -74,8 +74,9 @@ html, body {
   // This is the logo at the top of the ToC
   .logo {
     display: block;
-    max-width: 100%;
-    margin-bottom: $logo-margin;
+    max-width: 75%;
+    margin-top: 20px;
+    margin-left: 20px;
   }
 
   &>.search {
